Added separate Join page for users Marked Admins accordingly in user comments Fixed some typos Optimized Search screen CSS for smaller viewports

--- a/Stipendium/Content/Site.css
+++ b/Stipendium/Content/Site.css
@@ -140,3 +140,10 @@ btn btn-defaut{
 .pagination > li > a, .pagination > li > span {
     color:green;
 }
+
+@media only screen and (max-width: 840px){
+
+    #searchpanel{
+        flex-direction:column;
+    }
+}
