--- a/Stipendium/Views/Shared/_LoginPartial.cshtml
+++ b/Stipendium/Views/Shared/_LoginPartial.cshtml
@@ -38,7 +38,7 @@
             @if (!Request.IsAuthenticated)
             {
                 <li>@Html.ActionLink("Logga In", "Login", "Account")</li>
-                <li>@Html.ActionLink("Registera", "Registration", "Home")</li>
+                <li>@Html.ActionLink("Registrera", "Registration", "Home")</li>
 
             }
             else
