--- a/Stipendium/Views/Account/ForgotPassword.cshtml
+++ b/Stipendium/Views/Account/ForgotPassword.cshtml
@@ -3,7 +3,7 @@
     ViewBag.Title = "Glömt ditt lösenord?";
 }
 
-<h2>@ViewBag.Title.</h2>
+<h2>@ViewBag.Title</h2>
 
 @using (Html.BeginForm("ForgotPassword", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
 {
