--- a/Stipendium/Views/Comments/Details.cshtml
+++ b/Stipendium/Views/Comments/Details.cshtml
@@ -8,7 +8,7 @@
         </div>
         <span class="glyphicon glyphicon-user"></span>
 
-        @if (Model.Commenter.Roles.FirstOrDefault(r => r.RoleId == "86314fda-28ff-47e5-a342-2fd126e01744") != null)
+        @if (ViewBag.AdminRole!=null && Model.Commenter.Roles.FirstOrDefault(r => r.RoleId == ViewBag.AdminRole) != null)
         {
             <span>@Model.Commenter.FirstName @Model.Commenter.LastName</span>
             <span class="label label-warning">Admin</span>
