--- a/Stipendium/Views/Stiftelses/SearchResults.cshtml
+++ b/Stipendium/Views/Stiftelses/SearchResults.cshtml
@@ -22,6 +22,9 @@
     }
 }
 <style>
+    li{
+        min-width:150px;
+    }
     .pagination {
         margin: 5px 0px;
     }
@@ -68,7 +71,7 @@
 
     @Html.HiddenFor(model => model.Page)
 
-    <div style="display:flex; justify-content: space-between;">
+    <div style="display:flex; justify-content: space-between;" id="searchpanel">
         <div class="form-group">
             Län: <input type="checkbox" id="all-counties" @allCheck /> All / <a id="countiesToggle" data-toggle="collapse" href="#collapseCounties" aria-expanded="false" aria-controls="collapseExample">Ändra <span id="glyph" class="glyphicon glyphicon-triangle-bottom"></span></a>
         </div>
@@ -78,7 +81,7 @@
         <div class="form-group">
             Kommun:  @Html.EditorFor(model => model.SearchMunicipality, new { htmlAttributes = new { placeholder = "Kommun", @class = "form-control" } })
         </div>
-        <div>
+        <div class="form-group">
             Träffar/sida: @Html.DropDownListFor(model => model.ItemsPerPage, new SelectList(new List<int> {
 25,
 50,
