--- a/Stipendium/Views/Stiftelses/SearchResults.cshtml
+++ b/Stipendium/Views/Stiftelses/SearchResults.cshtml
@@ -22,7 +22,7 @@
     }
 }
 <style>
-    li{
+    #Counties>li{
         min-width:150px;
     }
     .pagination {
@@ -95,7 +95,7 @@
 
     <div class="@collapsed" id="collapseCounties">
         <div class="card card-body" style="padding:10px 20px; background-color:ghostwhite; border: 1px solid gainsboro;">
-            <ul style="list-style: none">
+            <ul style="list-style: none" id="Counties">
                 @foreach (var item in counties.List)
                 {
                     string check = "";
@@ -119,8 +119,8 @@
 <div class="pagination">
     @Html.PagedListPager(Model.SearchResults, page => Url.Action("NewPage", new { page = page, size = Model.SearchResults.PageSize, counties = selectedCounties, sTerm = Model.SearchTerm, sMunicip = Model.SearchMunicipality }))
 </div>
-<table class="table">
-    <tr>
+<table class="table" id="stiftelsetable">
+    <tr id="title-row">
         <th>
             Siftelsenamn
         </th>
@@ -137,7 +137,7 @@
     {
         <tr>
             <td>
-                @Html.ActionLink(item.Stiftelsenamn, "Details", new { id = item.Id }, new { style = "color: #333; text-decoration: underline;" }) @if(item.DateCreated!= null && item.DateCreated >= DateTimeOffset.Now.AddDays(-7)){<span class="label label-success">New!</span>}
+                @Html.ActionLink(item.Stiftelsenamn, "Details", new { id = item.Id }, new { style = "color: green; text-decoration: underline;" }) @if(item.DateCreated!= null && item.DateCreated >= DateTimeOffset.Now.AddDays(-7)){<span class="label label-success">New!</span>}
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Ändamål)
@@ -155,6 +155,9 @@
     }
 
 </table>
+<div class="pagination">
+    @Html.PagedListPager(Model.SearchResults, page => Url.Action("NewPage", new { page = page, size = Model.SearchResults.PageSize, counties = selectedCounties, sTerm = Model.SearchTerm, sMunicip = Model.SearchMunicipality }))
+</div>
 
 <script>
     $(document).ready(function () {
