Replaced some english text with swedish

--- a/Stipendium/Views/Manage/Index.cshtml
+++ b/Stipendium/Views/Manage/Index.cshtml
@@ -19,7 +19,7 @@
             }
             else
             {
-                @Html.ActionLink("Change your account information", "EditPrivUser")
+                @Html.ActionLink("Kontrollera din kontouppgifter", "EditPrivUser")
             }
         </dd>
         <dt>Password:</dt>
@@ -27,7 +27,7 @@
             [
             @if (Model.HasPassword)
             {
-                @Html.ActionLink("Change your password", "ChangePassword")
+                @Html.ActionLink("Byta ditt lösenord", "ChangePassword")
             }
             else
             {
