--- a/Stipendium/Views/Stiftelses/Details.cshtml
+++ b/Stipendium/Views/Stiftelses/Details.cshtml
@@ -72,7 +72,7 @@
                 </p>
             </div>
             <div class="modal-footer" style="border-top:none">
-                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-secondary" data-dismiss="modal">Stäng</button>
             </div>
         </div>
     </div>
