Changed link in JoinToday to lead to registration page

--- a/Stipendium/Views/Home/JoinToday.cshtml
+++ b/Stipendium/Views/Home/JoinToday.cshtml
@@ -8,4 +8,4 @@
 
 
 
-<p>@Html.ActionLink("Bli medlem!", "StiftelseApplication", "Account")</p>
+<p>@Html.ActionLink("Bli medlem!", "RegisterPrivate", "Account")</p>
