Fixed grammatical errors

--- a/Stipendium/Views/Home/Index.cshtml
+++ b/Stipendium/Views/Home/Index.cshtml
@@ -5,7 +5,7 @@
 <div class="jumbotron">
     <h1 class="display-4">Stiftelseverket</h1>
     <p class="lead">
-        Stiftelseverket.se är ett non-profit projekt där vi genom modern teknik vill hjälpa männsiskor
+        Stiftelseverket.se är ett non-profit projekt där vi med modern teknik vill hjälpa människor
         och organisationer att hitta fonder/stipendier för att kunna förverkliga något som annars inte
         skulle ha blivit av.</p>
 
@@ -24,7 +24,7 @@
                 <div class="caption">
                     <h3>Ansluta</h3>
                     <p>
-                        Registrera dig för att få tillgång till mera information, helt gratis utan kostnad!
+                        Registrera dig för att få tillgång till mer information, helt gratis utan kostnad!
                     </p>
                     <p><a href="/Account/RegisterPrivate" class="btn btn-primary" role="button">Bli Medlem</a>
                 </div>
