--- a/Stipendium/Views/Home/Join.cshtml
+++ b/Stipendium/Views/Home/Join.cshtml
@@ -5,5 +5,5 @@
 
 <h3>Saknar du din stiftelse?</h3>
 
-<p>Vi accepterar ansökningar om nya poster i vår databasen, fyll i formuläret nedan och en av våra representanter kontaktar dig för att verifiera informationen om din stiftelse. </p>
+<p>Vi accepterar ansökningar om nya poster i vår databas, fyll i formuläret nedan och en av våra representanter kontaktar dig för att verifiera informationen om din stiftelse. </p>
 <p>@Html.ActionLink("Starta här", "StiftelseApplication", "Account")</p>
