--- a/Stipendium/Views/Account/Login.cshtml
+++ b/Stipendium/Views/Account/Login.cshtml
@@ -18,7 +18,7 @@
             @using (Html.BeginForm("Login", "Account", new { ReturnUrl = ViewBag.ReturnUrl }, FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
             {
                 @Html.AntiForgeryToken()
-                <h4>Logga in på ditt kontot på Stiftelseverket.</h4>
+                <h4>Logga in på ditt konto på Stiftelseverket.</h4>
                 <hr />
                 @Html.ValidationSummary(true, "", new { @class = "text-danger" })
                 <div class="form-group">
