--- a/Stipendium/Views/Account/RegisterPrivate.cshtml
+++ b/Stipendium/Views/Account/RegisterPrivate.cshtml
@@ -22,7 +22,7 @@
         <div class="col-md-10">
             @Html.PasswordFor(m => m.Password, new { @class = "form-control" })
             <span class="form-text text-muted">
-                Lösenord måste ha minst en siffer och båda en stor och en liten   bokstav
+                Lösenord måste innehålla minst en siffra och både en stor och en liten   bokstav
             </span>
         </div>
     </div>
