Added functionality to attach an Excel form when submitting a new Stiftelse application

--- a/Stipendium/Views/Shared/Error.cshtml
+++ b/Stipendium/Views/Shared/Error.cshtml
@@ -8,7 +8,9 @@
 @{
     if (String.IsNullOrEmpty(ViewBag.errorMessage))
     {
-        <h2 class="text-danger">An error occurred while processing your request.</h2>
+        <h2 class="text-danger">
+            Ett fel uppstod när din begäran skulle bearbetas.
+        </h2>
     }
     else
     {
