changed email in details

--- a/Stipendium/Views/Stiftelses/Details.cshtml
+++ b/Stipendium/Views/Stiftelses/Details.cshtml
@@ -68,7 +68,7 @@
                     stiftelsen och önskar att korrigera eller tillägga informationen på denna sidan, vänligen maila oss på:
                 </p>
                 <p>
-                    <a href="mailto:admin@stiftelseverket.se">admin@@stiftelseverket.se</a>
+                    <a href="mailto:stiftelseverket@gmail.com">stiftelseverket@gmail.com</a>
                 </p>
             </div>
             <div class="modal-footer" style="border-top:none">
